# prop-hedge-calculator

./: .gitignore  .hfignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
configs/: example_prop_firm.json
prop_research/: __init__.py
prop_research/app/: __init__.py  hedge_model.py  risk_curve.py  streamlit_app.py  trading_cockpit.py
prop_research/config/: __init__.py  account_states.py  loader.py  templates.py
prop_research/domain/: __init__.py  config.py  enums.py  snapshot.py  state_machine.py
prop_research/optimization/: __init__.py  grid_search.py
prop_research/simulation/: __init__.py  monte_carlo.py
prop_research/strategies/: __init__.py  base.py  continuous.py  fixed.py  zoned.py
tests/: test_account_states.py  test_config_loader.py  test_hedge_model.py  test_prop_templates.py  test_risk_curve.py  test_simulation_and_optimizer.py  test_state_machine.py  test_strategies.py  test_streamlit_app_helpers.py  test_trading_cockpit.py
